<resources>
    <string name="app_name">Bulletin-board</string>
    <string name="hello">Добро пожаловать</string>
    <string name="mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="email">Почта МГТУ</string>
    <string name="phone">Телефон</string>
    <string name="logout">Выйти</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="feed">Объявления</string>
    <string name="filter">Filter</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="create_new_bulletin">create_new_bulletin</string>
    <string name="home">Home</string>
    <string name="like">Like</string>
    <string name="profile">Profile</string>
    <string name="create_bulletin">Create Bulletin</string>
    <string name="bulletin_name">Bulletin Name</string>
    <string name="bulletin_description">Bulletin Description</string>
    <string name="bulletin_price">Bulletin Price</string>
    <string name="bulletin_type">bulletin_type</string>
    <string name="finish">Завершить</string>
    <string name="photo_from_gallery">Photo from gallery</string>
</resources>
