<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".firebase.registration.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/surname_et"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_reg_et"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_acc_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/register"
        android:textSize="20sp"/>

</LinearLayout>
    </ScrollView>
